Change List
=========
Version 2016082001
Added shimming and loading of presets from bundle files in videoeasy dir. Also removed the ablity to declare a jquery dependency. You should use shimming instead

Version 2016011102
Fixed bug where uploaded JS and CSS files would not be served correctly, and the filter would fail

Version 2016011101
Added support for preset bundles import/export
Added RAWVIDEOURL and RAWPARAMS variables
Changed handles of loaded dependencies from recjs[template number] e.g recjs1 , recjs2 etc to requirejs_[templatekey] e.g requiredjs_flowplayer

Version 2015120401
Added support for passing AMD params via HTML


Version 2015032401
Bug fix for < PHP5.5 users

Version 2015032400
First public release