@@ -1,0 +1,1 @@
+{"key":"fff","name":"Flowplayer First Frame","amd":"0","requirejs":"//releases.flowplayer.org/6.0.5/flowplayer.min.js","shim":"","requirecss":"//releases.flowplayer.org/6.0.5/skin/minimalist.css","body":"<div class=\"fff\">\n<div class=\"flowplayer\" >\n   <video>\n      <source type=\"video/mp4\"  src=\"@@VIDEOURL@@\">\n   </video>\n</div>\n</div>\n","script":"","defaults":"WIDTH=600,HEIGHT=400","style":".fff {\ndisplay: inline-block;\n width: 600px;\n}\n.flowplayer{\n min-height: 400px;\n}"}
