@@ -1,0 +1,1 @@
+{"key":"jwplayer","name":"JW_Player","amd":"1","requirejs":"//cdn.jsdelivr.net/jwplayer/7.1.4/jwplayer.js","shim":"jwplayer","requirecss":"","body":"<div id=\"@@AUTOID@@\"></div>","script":"jwplayer(\"@@AUTOID@@\").setup({\nfile: \"@@VIDEOURL@@\",\nimage: \"@@DEFAULTPOSTERURL@@\",\ntitle: \"@@TITLE@@\",\nwidth: \"400\",\naspectratio: \"4:3\",\nkey: @@jwplayerkey@@\n});","defaults":"jwplayerkey=\"YOUR_JWPLAYER_KEY_GOES_HERE\"","style":""}
