@@ -1,0 +1,1 @@
+{"name":"Mediaelement_Audio","key":"mediaelementaudio","instructions":"This is a shimmed version of mediaelementjs for audio","showatto":"0","showplayers":"1","requirecss":"/filter/poodll/3rdparty/mediaelement-2.22.0/build/mediaelementplayer.min.css","requirejs":"/filter/poodll/3rdparty/mediaelement-2.22.0/build/mediaelement-and-player.js","shim":"mejs","defaults":"WIDTH=400,HEIGHT=30","amd":"1","body":"<audio id=\"@@AUTOID@@\" src=\"@@VIDEOURL@@\" width=\"@@WIDTH@@\" height=\"@@HEIGHT@@\"></audio>\n","bodyend":"","script":"var player = new mejs.MediaElementPlayer(\"#\" + \"@@AUTOID@@\");\nplayer.pause();","style":"","dataset":"","datasetvars":""}
