@@ -1,1 +1,1 @@
-{"name":"Mediaelement_Video","key":"mediaelementvideo","instructions":"This is a shimmed version of mediaelementjs for video","showatto":"0","showplayers":"1","requirecss":"/filter/poodll/3rdparty/mediaelement-2.22.0/build/mediaelementplayer.min.css","requirejs":"/filter/poodll/3rdparty/mediaelement-2.22.0/build/mediaelement-and-player.js","shim":"mejs","defaults":"WIDTH=640,HEIGHT=480","amd":"1","body":"<video id=\"@@AUTOID@@\" src=\"@@VIDEOURL@@\" width=\"@@WIDTH@@\" height=\"@@HEIGHT@@\"></video>","bodyend":"","script":"var player = new mejs.MediaElementPlayer(\"#\" + \"@@AUTOID@@\");\nplayer.pause();","style":"","dataset":"","datasetvars":""}
+{"key":"mediaelementvideo","name":"Mediaelement_Video","amd":"1","requirejs":"//cdnjs.cloudflare.com/ajax/libs/mediaelement/2.22.1/mediaelement-and-player.min.js","shim":"mejs","requirecss":"//cdnjs.cloudflare.com/ajax/libs/mediaelement/2.22.1/mediaelementplayer.min.css","body":"<video id=\"@@AUTOID@@\" src=\"@@VIDEOURL@@\" width=\"@@WIDTH@@\" height=\"@@HEIGHT@@\"></video>","script":"var player = new mejs.MediaElementPlayer(\"#\" + \"@@AUTOID@@\");\nplayer.pause();","defaults":"WIDTH=640,HEIGHT=480","style":""}
