@@ -1,0 +1,1 @@
+{"key":"videojs","name":"Video JS","amd":"1","requirejs":"//vjs.zencdn.net/4.10/video.js","shim":"","requirecss":"//vjs.zencdn.net/4.10/video-js.css","body":"<video id=\"@@AUTOID@@\" class=\"video-js vjs-default-skin\" controls preload=\"auto\" width=\"@@WIDTH@@\" height=\"@@HEIGHT@@\"   data-setup='{\"example_option\":true}'><source src=\"@@VIDEOURL@@\" type=\"@@AUTOMIME@@\" /></video>","script":"","defaults":"WIDTH=640,HEIGHT=480","style":""}
