@@ -1,0 +1,1 @@
+{"key":"youtubelightbox","name":"YouTube(Lightbox)","amd":"1","requirejs":"//cdnjs.cloudflare.com/ajax/libs/featherlight/1.5.0/featherlight.min.js","shim":"featherlight","requirecss":"//cdnjs.cloudflare.com/ajax/libs/featherlight/1.5.0/featherlight.min.css","body":"<a href=\"#\" data-featherlight=\"#@@AUTOID@@\"><div class=\"filter_videoeasy_ytl\"><img src=\"@@AUTOPOSTERURLJPG@@\" width=\"@@WIDTH@@\" height=\"@@HEIGHT@@\"/></div></a><div style=\"display: none;\"><div  id=\"@@AUTOID@@\"><iframe width=\"@@videowidth@@\" height=\"@@videoheight@@\" src=\"//www.youtube.com/embed/@@FILENAME@@?rel=0\" frameborder=\"0\" allowfullscreen></iframe></div></div>","script":"","defaults":"WIDTH=240,HEIGHT=160,videowidth=600,videoheight=400","style":".filter_videoeasy_ytl img{display: block;}\n\t\t\t\t\t.filter_videoeasy_ytl { \n\t\t\t\t\tposition: relative; \n\t\t\t\t\tdisplay: inline-block;\n\t\t\t\t\t}\n\t\t\t\t\t.filter_videoeasy_ytl:after {\n\t\t\t\t\tcontent: \">\";\n\t\t\t\t\t  font-size: 20px;\n\t\t\t\t\t  line-height: 30px;\n\t\t\t\t\t  color: #FFFFFF;\n\t\t\t\t\t  text-align: center;\n\t\t\t\t\t  position: absolute;\n\t\t\t\t\t  top: 40%;\n\t\t\t\t\t  left: 40%;\n\t\t\t\t\t  width: 20%;\n\t\t\t\t\t  height: 32px;\n\t\t\t\t\t  z-index: 2;\n\t\t\t\t\t  background: #FF0000;\n\t\t\t\t\t  border-radius: 8px;\n\t\t\t\t\t  pointer-events: none;\n\t\t\t\t\t}"}
